:icons: font

= Gentics Mesh Changelog

== 0.9.6 (PENDING)

icon:plus[] Auth: The Java keystore file will now automatically be created if none could be found. The keystore password will be taken from the `mesh.yml` file or randomly generated and stored in the config.

icon:check[] Core: Fix node migration search index handling. Previous migrations did not correctly update the index. A automatic reindex will be invoked during startup.

== 0.9.5 (13.04.2017)

icon:check[] Core: The schema check for duplicate field labels has been removed. The check previously caused schema updates to fail.

== 0.9.4 (13.04.2017)

icon:check[] UI: Fix project creation.

icon:check[] UI: Fix error when attempting to translate a node.

icon:check[] UI: Fix incorrect search query.

icon:check[] UI: Display error when attempting to publish a node with an unpublished ancestor

icon:check[] JWT: The `signatureSecret` property within the Gentics Mesh configuration has been renamed to `keystorePassword`.

icon:plus[] JWT: It is now possible to configure the algorithm which is used to sign the JWT tokens.

icon:plus[] Java: The Java model classes have been updated to provide fluent API's.

icon:plus[] Demo: It is now possible to access elasticsearch head UI directly from mesh via http://localhost:8080/elastichead - The UI will only be provided if the elasticsearch http ports are enabled. Only enable this for development since mesh will not protect the Elasticsearch HTTP server.

icon:plus[] Core: Downgrade and upgrade checks have been added. It is no longer possible to run Gentics Mesh using a dump which contains data which was touched by a newer mesh version. Upgrading a snapshot version of Gentics Mesh to a release version can be performed under advisement.

== 0.9.3 (10.04.2017)

icon:check[] UI: A bug which prevented assigning created schemas to projects was fixed.

icon:check[] A bug which could lead to concurrent request failing was fixed.
