@@ -4,6 +4,7 @@ import static com.gentics.mesh.core.data.ContainerType.DRAFT;
 import static com.gentics.mesh.core.data.ContainerType.PUBLISHED;
 import static com.gentics.mesh.core.data.relationship.GraphPermission.UPDATE_PERM;
 import static com.gentics.mesh.core.rest.error.Errors.error;
+import static com.gentics.mesh.rest.Messages.message;
 import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 import static io.netty.handler.codec.http.HttpResponseStatus.CREATED;
 import static io.netty.handler.codec.http.HttpResponseStatus.INTERNAL_SERVER_ERROR;
@@ -11,12 +12,14 @@ import static io.netty.handler.codec.http.HttpResponseStatus.OK;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CountDownLatch;
 
 import javax.inject.Inject;
 
 import org.apache.commons.lang.NotImplementedException;
 
 import com.gentics.mesh.Mesh;
+import com.gentics.mesh.cli.BootstrapInitializer;
 import com.gentics.mesh.context.InternalActionContext;
 import com.gentics.mesh.core.data.Project;
 import com.gentics.mesh.core.data.Release;
@@ -25,6 +28,7 @@ import com.gentics.mesh.core.data.root.MicroschemaContainerRoot;
 import com.gentics.mesh.core.data.root.RootVertex;
 import com.gentics.mesh.core.data.root.SchemaContainerRoot;
 import com.gentics.mesh.core.data.schema.MicroschemaContainerVersion;
+import com.gentics.mesh.core.data.schema.SchemaContainer;
 import com.gentics.mesh.core.data.schema.SchemaContainerVersion;
 import com.gentics.mesh.core.data.search.SearchQueue;
 import com.gentics.mesh.core.data.search.SearchQueueBatch;
@@ -37,6 +41,7 @@ import com.gentics.mesh.core.verticle.handler.AbstractCrudHandler;
 import com.gentics.mesh.core.verticle.handler.HandlerUtilities;
 import com.gentics.mesh.core.verticle.node.NodeMigrationVerticle;
 import com.gentics.mesh.dagger.MeshInternal;
+import com.gentics.mesh.graphdb.NoTx;
 import com.gentics.mesh.graphdb.spi.Database;
 import com.gentics.mesh.util.ResultInfo;
 import com.gentics.mesh.util.Tuple;
@@ -52,10 +57,13 @@ public class ReleaseCrudHandler extends AbstractCrudHandler<Release, ReleaseResp
 
 	private SearchQueue searchQueue;
 
+	private BootstrapInitializer boot;
+
 	@Inject
-	public ReleaseCrudHandler(Database db, SearchQueue searchQueue, HandlerUtilities utils) {
+	public ReleaseCrudHandler(Database db, SearchQueue searchQueue, HandlerUtilities utils, BootstrapInitializer boot) {
 		super(db, utils);
 		this.searchQueue = searchQueue;
+		this.boot = boot;
 	}
 
 	@Override
@@ -269,4 +277,56 @@ public class ReleaseCrudHandler extends AbstractCrudHandler<Release, ReleaseResp
 			throw error(INTERNAL_SERVER_ERROR, "Unknown error while getting microschema versions", e);
 		}
 	}
+
+	/**
+	 * Helper handler which will handle requests for processing remaining not yet migrated nodes.
+	 *
+	 * @param ac
+	 * @param releaseUuid
+	 */
+	public void handleMigrateRemaining(InternalActionContext ac, String releaseUuid) {
+
+		utils.operateNoTx(ac, () -> {
+			Project project = ac.getProject();
+			for (SchemaContainer schemaContainer : boot.schemaContainerRoot().findAll()) {
+				SchemaContainerVersion latestVersion = schemaContainer.getLatestVersion();
+				SchemaContainerVersion currentVersion = latestVersion;
+				while (true) {
+					currentVersion = currentVersion.getPreviousVersion();
+					if (currentVersion == null) {
+						break;
+					}
+					// System.out.println("Before migration " + schemaContainer.getName() + " - " + currentVersion.getUuid() + "="
+					// + currentVersion.getFieldContainers(releaseUuid).size());
+					// if (!getLatestVersion().getUuid().equals(version.getUuid())) {
+					// for (GraphFieldContainer container : version.getFieldContainers()) {
+					// NodeImpl node = container.in(HAS_FIELD_CONTAINER).nextOrDefaultExplicit(NodeImpl.class, null);
+					// System.out.println(
+					// "Node: " + node.getUuid() + "ne: " + node.getLastEditedTimestamp() + "nc: " + node.getCreationTimestamp());
+					// }
+					// }
+					CountDownLatch latch = new CountDownLatch(1);
+					DeliveryOptions options = new DeliveryOptions();
+					options.addHeader(NodeMigrationVerticle.UUID_HEADER, schemaContainer.getUuid());
+					options.addHeader(NodeMigrationVerticle.FROM_VERSION_UUID_HEADER, currentVersion.getUuid());
+					options.addHeader(NodeMigrationVerticle.TO_VERSION_UUID_HEADER, latestVersion.getUuid());
+					options.addHeader(NodeMigrationVerticle.RELEASE_UUID_HEADER, releaseUuid);
+					options.addHeader(NodeMigrationVerticle.PROJECT_UUID_HEADER, project.getUuid());
+
+					SchemaContainerVersion version = currentVersion;
+					Mesh.vertx().eventBus().send(NodeMigrationVerticle.SCHEMA_MIGRATION_ADDRESS, null, options, rh -> {
+						try (NoTx noTrx = db.noTx()) {
+							System.out.println("After migration " + schemaContainer.getName() + " - " + version.getUuid() + "="
+									+ version.getFieldContainers(releaseUuid).size());
+						}
+						latch.countDown();
+					});
+					latch.await();
+				}
+
+			}
+			return message(ac, "schema_migration_invoked");
+		}, model -> ac.send(model, OK));
+	}
+
 }
