@@ -49,6 +49,22 @@ public class ReleaseEndpoint extends AbstractProjectEndpoint {
 		addCreateHandler();
 		addReadHandler();
 		addUpdateHandler();
+		addNodeMigrationHandler();
+	}
+
+	private void addNodeMigrationHandler() {
+		Endpoint endpoint = createEndpoint();
+		endpoint.path("/:releaseUuid/migrateSchemas");
+		endpoint.method(GET);
+		endpoint.addUriParameter("releaseUuid", "Uuid of the release", UUIDUtil.randomUUID());
+		endpoint.description("Invoked the node migration for not yet migrated nodes of schemas that are assigned to the release.");
+		endpoint.exampleResponse(OK, miscExamples.getMessageResponse(), "schema_migration_invoked");
+		endpoint.produces(APPLICATION_JSON);
+		endpoint.handler(rc -> {
+			InternalActionContext ac = new InternalRoutingActionContextImpl(rc);
+			String releaseUuid = rc.request().getParam("releaseUuid");
+			crudHandler.handleMigrateRemaining(ac, releaseUuid);
+		});
 	}
 
 	private void addCreateHandler() {
